# CICD_example

./: pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
app/: calculator.py
