[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CICD_example"
version = "0.1.0"
description = "Demo seminar Python package for CI pipeline"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "geekonchik" }
]

[tool.setuptools]
packages = ["app"]
